@@ -6,6 +6,6 @@ AM_CFLAGS=-DGWEN_HEADERS=\"@gwenhywfar_headers@\"
 bin_PROGRAMS=mklistdoc
 #noinst_HEADERS=args.h
 mklistdoc_SOURCES=mklistdoc.c
-#mklistdoc_LDADD=-L/mingw/lib -L../../src @gwenhywfar_libs@
+#mklistdoc_LDADD=-L/mingw/lib -L../../src -lgwenhywfar
 
 
