@@ -1,7 +1,7 @@
 INCLUDES=@all_includes@
 
 if USE_NCURSES
-libsui = $(gwenhywfar_libsui)
+libsui = -lgwenui
 else
 libsui =
 endif
@@ -9,7 +9,7 @@ endif
 noinst_PROGRAMS=gwentest
 gwentest_SOURCES=gwentest.c
 gwentest_LDADD=\
-  -L/mingw/lib -L../src $(gwenhywfar_libs) \
+  -L/mingw/lib -L../src -lgwenhywfar \
   -L../gwenui $(libsui)
 
 EXTRA_DIST = README.MSVC gwentest.vcproj
